# rustai_abalone

./: .gitignore  Cargo.toml  README.md
benches/: bench_mg_own_move.rs
old_rust_files/: player_copy_20240808.rs
src/: game.rs  lib.rs  marble_moves.rs  player.rs  util.rs
src/magister_zero_unwrap_save/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/magister_zero_unwrap_save/variables/: variables.index
