[package]
name = "abalone"
version = "0.1.0"
edition = "2021"
exclude = ["target/", "old_rust_files/", "Cargo.lock"]

[dependencies]
phf = { version = "0.11", features = ["macros"] }
tensorflow = "0.21.0"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.2.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench_mg_own_move"
harness = false
